--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
   </head>
 
   <body>
+    <header>
+      <h1>TV Shows</h1>
+    </header>
     <div id="root">
+      <div id="searchEpisodes">
+        <select class="select-css" id="showSelector">
+          <option value="none">All Shows</option>
+        </select>
+      </div>
     </div>
 
     <!-- Loads a provided function called getAllEpisodes() which returns all episodes -->
