--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
       <h1>TV Shows</h1>
     </header>
-    <div id="root">
+    <!-- <div id="root">
       <div id="card">
         <div id="cardHeader">
           <h3 id="title">name</h3>
@@ -26,8 +26,10 @@
           earum magni suscipit, laboriosam ex harum nostrum repellat quas
           sapiente veritatis.
         </p>
+        
       </div>
-    </div>
+    </div> -->
+    <div id="root"></div>
 
     <!-- Loads a provided function called getAllEpisodes() which returns all episodes -->
     <script src="episodes.js"></script>
